# polor-detection

./: docker-compose-prov.yml  docker-compose.yml  package-lock.json  package.json
backend/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
backend/api/: db.py  main.py  migrate_db.py  setting.py
backend/api/cruds/: animal.py  animal_cage_log.py  cage.py  classification.py  detect_polor.py  detect_time.py  enrichment.py  event.py  excretion.py  expropriation.py  meal.py  memo.py  polar.py  polar_cage_log.py  polor.py  polor_cage_log.py  pool_cleaning.py  temperature.py  training.py  video.py  wakeup_time.py  water.py
backend/api/detect/: .gitignore  README.md  calc_speed.py  classification_system.py  labels.txt  merge_system.py  move_avg.py  plot_ground_truth.py  predict_oneday.txt  predict_output.txt  seikairitu.py  speed.txt  yolo_script.py
backend/api/models/: model.py
backend/api/routers/: animal.py  animal_cage_log.py  cage.py  classification.py  detect_time.py  detection_polor.py  enrichment.py  event.py  excretion.py  expropriation.py  meal.py  memo.py  polar.py  polar_cage_log.py  polor.py  polor_cage_log.py  pool_cleaning.py  temperature.py  training.py  video.py  wakeup_time.py  water.py
backend/api/schemas/: animal.py  animal_cage_log.py  cage.py  classification.py  detect_polor.py  detect_time.py  enrichment.py  event.py  excretion.py  expropriation.py  meal.py  (+11 more)
backend/detect/: .gitignore  classification_func.py  classification_system.py  exec.py  ground_trurh.txt  labels.txt  predict_oneday_avg.txt  speed.txt
(+88 files in other folders)
