[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "^2.0.20"
aiomysql = "^0.2.0"
python-multipart = "^0.0.6"
ultralytics = "^8.0.227"
torch = "^2.1.2"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
opencv-python = "^4.9.0.80"
pillow = "^10.2.0"
psutil = "^5.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
